--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -28,7 +28,9 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+teal:       #009688,
+  blue-grey:    #607D8B
 );
 
 
