--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,29 @@
-page-home {
+ion-content.home {
+  background-color: lightgrey;
+}
 
+.title {
+  color: #424242 !important;
+}
+
+.cover {
+  height: 100px;
+}
+
+.ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.crop {
+    width: 100%;
+    height: 170px;
+    overflow: hidden;
+}
+
+.action-area{
+  background-color: #e9edf7;
+}
+.action-area button{
+  color: #868cb1 !important;
 }
