--- a/src/pages/page-details/page-details.scss
+++ b/src/pages/page-details/page-details.scss
@@ -26,7 +26,28 @@ ion-content.profile-page {
   width: 80px;
 }
 
-.actions{
-  margin-top: 36px! important;
+.actions {
+  margin-top: 0px! important;
+  background-color: #32323e;
+  max-height: 50%;
+  -webkit-box-shadow: 0px 7px 26px -10px rgba(0, 0, 0, 0.87);
+  -moz-box-shadow: 0px 7px 26px -10px rgba(0, 0, 0, 0.87);
+  box-shadow: 0px 7px 26px -10px rgba(0, 0, 0, 0.87);
+}
+
+.actions button {
+  color: lightgrey !important;
+}
+
+.actions ion-col {
+  padding: 0px !important;
+}
+
+.album-slider {
+  height: 300px !important;
+}
+
+div.desc-text {
+  padding: 8px;
   background-color: #32323e;
 }
