--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -15,15 +15,17 @@ ion-content.home {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
 .crop {
-    width: 100%;
-    height: 170px;
-    overflow: hidden;
+  width: 100%;
+  max-height: 170px;
+  overflow: hidden;
 }
 
-.action-area{
+.action-area {
   background-color: #e9edf7;
 }
-.action-area button{
+
+.action-area button {
   color: #868cb1 !important;
 }
